Fixed HUNO-409: Patient screen - appointment cards alignment issue in the responsive screen web

--- a/src/patient/styles/doctor_appointments_card.scss
+++ b/src/patient/styles/doctor_appointments_card.scss
@@ -170,3 +170,15 @@
   }
 
 }
+
+@media only screen and (max-width: 1375px) and (min-width: 1275px) {
+  .upcoming-appointment-card-container {
+    min-width: 365px !important;
+  }
+  .card-text-time {
+    margin-left: 70px;
+  }
+  .card-image-video-camera {
+    left: 180px !important;
+  }
+}
